# zxcvbn-ws

./: .envrc  CHANGELOG.md  README.md  default.nix  docker.nix  zxcvbn-ws.cabal  zxcvbn-ws.nix
src/: Main.hs
www/: index.html  zxcvbn.js
